fix social media button on mobile

--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ a:visited, a:link  {
     #social-links ul {
         text-align: center;
         margin-top: 100px;
+        z-index: 1035;
     }
 
     .portfolio .card-body, .portfolio .card  {
